[package]
name = "serialize-quill-delta"
version = "0.1.0"
authors = ["Dmitriy Cherchenko"]
license = "MIT"
description = "Serialize a Quill Delta object to text"
repository = "https://github.com/dchenk/serialize-quill-delta"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
